# clangcheck

./: CMakeLists.txt  ideas.txt  main.cpp
cmake/: FindClang.cmake
